[gd_scene load_steps=9 format=2]

[ext_resource path="res://Game/Maps/Map.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/Menus/SettingsMenu.gd" type="Script" id=2]
[ext_resource path="res://Game/Menus/Textures/KeyKeyboardCancel.png" type="Texture" id=4]
[ext_resource path="res://Game/Menus/Textures/KeyGamepadConfirm.png" type="Texture" id=5]
[ext_resource path="res://Game/Menus/Fonts/ButtonFont.tres" type="DynamicFont" id=7]
[ext_resource path="res://Game/Menus/Fonts/chary___.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Game/Menus/Textures/KeyGamepadCancel.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 8 )

[node name="Map" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Wall" parent="." index="2"]
tile_data = PoolIntArray( -1, 15, 0, -65536, 15, 1, -65535, 15, 1, -65534, 15, 1, -65533, 15, 1, -65532, 15, 1, -65531, 15, 1, -65530, 15, 1, -65529, 15, 1, -65528, 15, 1, -65527, 15, 1, -65526, 15, 1, -65525, 15, 1, -65524, 15, 1, -65523, 15, 1, -65522, 15, 1, -65521, 15, 1, -65520, 15, 1, -65519, 15, 1, -65518, 15, 1, -65517, 15, 1, -65516, 15, 1, -65515, 15, 1, -65514, 15, 1, -65513, 15, 1, -65512, 15, 1, -65511, 15, 1, -65510, 15, 1, -65509, 15, 1, -65508, 15, 1, -65507, 15, 1, -65506, 15, 1, -65505, 15, 1, -65504, 15, 2, 65535, 15, 65536, 0, 15, 65537, 1, 15, 65537, 2, 15, 65537, 3, 15, 65537, 4, 15, 65537, 5, 15, 65537, 6, 15, 65537, 7, 15, 65537, 8, 15, 65537, 9, 15, 65537, 10, 15, 65537, 11, 15, 65537, 12, 15, 65537, 13, 15, 65537, 14, 15, 65537, 15, 15, 65537, 16, 15, 65537, 17, 15, 65537, 18, 15, 65537, 19, 15, 65537, 20, 15, 65537, 21, 15, 65537, 22, 15, 65537, 23, 15, 65537, 24, 15, 65537, 25, 15, 65537, 26, 15, 65537, 27, 15, 65537, 28, 15, 65537, 29, 15, 65537, 30, 15, 65537, 31, 15, 65537, 32, 15, 65538, 131071, 15, 65536, 65536, 15, 65537, 65537, 15, 65537, 65538, 15, 65537, 65539, 15, 65537, 65540, 15, 65537, 65541, 15, 65537, 65542, 15, 65537, 65543, 15, 65537, 65544, 15, 65537, 65545, 15, 65537, 65546, 15, 65537, 65547, 15, 65537, 65548, 15, 65537, 65549, 15, 65537, 65550, 15, 65537, 65551, 15, 65537, 65552, 15, 65537, 65553, 15, 65537, 65554, 15, 65537, 65555, 15, 65537, 65556, 15, 65537, 65557, 15, 65537, 65558, 15, 65537, 65559, 15, 65537, 65560, 15, 65537, 65561, 15, 65537, 65562, 15, 65537, 65563, 15, 65537, 65564, 15, 65537, 65565, 15, 65537, 65566, 15, 65537, 65567, 15, 65537, 65568, 15, 65538, 196607, 15, 65536, 131072, 15, 65537, 131073, 15, 65537, 131074, 15, 65537, 131075, 15, 65537, 131076, 15, 65537, 131077, 15, 65537, 131078, 15, 65537, 131079, 15, 65537, 131080, 15, 65537, 131081, 15, 65537, 131082, 15, 65537, 131083, 15, 65537, 131084, 15, 65537, 131085, 15, 65537, 131086, 15, 65537, 131087, 15, 65537, 131088, 15, 65537, 131089, 15, 65537, 131090, 15, 65537, 131091, 15, 65537, 131092, 15, 65537, 131093, 15, 65537, 131094, 15, 65537, 131095, 15, 65537, 131096, 15, 65537, 131097, 15, 65537, 131098, 15, 65537, 131099, 15, 65537, 131100, 15, 65537, 131101, 15, 65537, 131102, 15, 65537, 131103, 15, 65537, 131104, 15, 65538, 262143, 15, 65536, 196608, 15, 65537, 196609, 15, 65537, 196610, 15, 65537, 196611, 15, 65537, 196612, 15, 65537, 196613, 15, 65537, 196614, 15, 65537, 196615, 15, 65537, 196616, 15, 65537, 196617, 15, 65537, 196618, 15, 65537, 196619, 15, 65537, 196620, 15, 65537, 196621, 15, 65537, 196622, 15, 65537, 196623, 15, 65537, 196624, 15, 65537, 196625, 15, 65537, 196626, 15, 65537, 196627, 15, 65537, 196628, 15, 65537, 196629, 15, 65537, 196630, 15, 65537, 196631, 15, 65537, 196632, 15, 65537, 196633, 15, 65537, 196634, 15, 65537, 196635, 15, 65537, 196636, 15, 65537, 196637, 15, 65537, 196638, 15, 65537, 196639, 15, 65537, 196640, 15, 65538, 327679, 15, 65536, 262144, 15, 65537, 262145, 15, 65537, 262146, 15, 65537, 262147, 15, 65537, 262148, 15, 65537, 262149, 15, 65537, 262150, 15, 65537, 262151, 15, 65537, 262152, 15, 65537, 262153, 15, 65537, 262154, 15, 65537, 262155, 15, 65537, 262156, 15, 65537, 262157, 15, 65537, 262158, 15, 65537, 262159, 15, 65537, 262160, 15, 65537, 262161, 15, 65537, 262162, 15, 65537, 262163, 15, 65537, 262164, 15, 65537, 262165, 15, 65537, 262166, 15, 65537, 262167, 15, 65537, 262168, 15, 65537, 262169, 15, 65537, 262170, 15, 65537, 262171, 15, 65537, 262172, 15, 65537, 262173, 15, 65537, 262174, 15, 65537, 262175, 15, 65537, 262176, 15, 65538, 393215, 15, 65536, 327680, 15, 65537, 327681, 15, 65537, 327682, 15, 65537, 327683, 15, 65537, 327684, 15, 65537, 327685, 15, 65537, 327686, 15, 65537, 327687, 15, 65537, 327688, 15, 65537, 327689, 15, 65537, 327690, 15, 65537, 327691, 15, 65537, 327692, 15, 65537, 327693, 15, 65537, 327694, 15, 65537, 327695, 15, 65537, 327696, 15, 65537, 327697, 15, 65537, 327698, 15, 65537, 327699, 15, 65537, 327700, 15, 65537, 327701, 15, 65537, 327702, 15, 65537, 327703, 15, 65537, 327704, 15, 65537, 327705, 15, 65537, 327706, 15, 65537, 327707, 15, 65537, 327708, 15, 65537, 327709, 15, 65537, 327710, 15, 65537, 327711, 15, 65537, 327712, 15, 65538, 458751, 15, 65536, 393216, 15, 65537, 393217, 15, 65537, 393218, 15, 65537, 393219, 15, 65537, 393220, 15, 65537, 393221, 15, 65537, 393222, 15, 65537, 393223, 15, 65537, 393224, 15, 65537, 393225, 15, 65537, 393226, 15, 65537, 393227, 15, 65537, 393228, 15, 65537, 393229, 15, 65537, 393230, 15, 65537, 393231, 15, 65537, 393232, 15, 65537, 393233, 15, 65537, 393234, 15, 65537, 393235, 15, 65537, 393236, 15, 65537, 393237, 15, 65537, 393238, 15, 65537, 393239, 15, 65537, 393240, 15, 65537, 393241, 15, 65537, 393242, 15, 65537, 393243, 15, 65537, 393244, 15, 65537, 393245, 15, 65537, 393246, 15, 65537, 393247, 15, 65537, 393248, 15, 65538, 524287, 15, 65536, 458752, 15, 65537, 458753, 15, 65537, 458754, 15, 65537, 458755, 15, 65537, 458756, 15, 65537, 458757, 15, 65537, 458758, 15, 65537, 458759, 15, 65537, 458760, 15, 65537, 458761, 15, 65537, 458762, 15, 65537, 458763, 15, 65537, 458764, 15, 65537, 458765, 15, 65537, 458766, 15, 65537, 458767, 15, 65537, 458768, 15, 65537, 458769, 15, 65537, 458770, 15, 65537, 458771, 15, 65537, 458772, 15, 65537, 458773, 15, 65537, 458774, 15, 65537, 458775, 15, 65537, 458776, 15, 65537, 458777, 15, 65537, 458778, 15, 65537, 458779, 15, 65537, 458780, 15, 65537, 458781, 15, 65537, 458782, 15, 65537, 458783, 15, 65537, 458784, 15, 65538, 589823, 15, 65536, 524288, 15, 65537, 524289, 15, 65537, 524290, 15, 65537, 524291, 15, 65537, 524292, 15, 65537, 524293, 15, 65537, 524294, 15, 65537, 524295, 15, 65537, 524296, 15, 65537, 524297, 15, 65537, 524298, 15, 65537, 524299, 15, 65537, 524300, 15, 65537, 524301, 15, 65537, 524302, 15, 65537, 524303, 15, 65537, 524304, 15, 65537, 524305, 15, 65537, 524306, 15, 65537, 524307, 15, 65537, 524308, 15, 65537, 524309, 15, 65537, 524310, 15, 65537, 524311, 15, 65537, 524312, 15, 65537, 524313, 15, 65537, 524314, 15, 65537, 524315, 15, 65537, 524316, 15, 65537, 524317, 15, 65537, 524318, 15, 65537, 524319, 15, 65537, 524320, 15, 65538, 655359, 15, 65536, 589824, 15, 65537, 589825, 15, 65537, 589826, 15, 65537, 589827, 15, 65537, 589828, 15, 65537, 589829, 15, 65537, 589830, 15, 65537, 589831, 15, 65537, 589832, 15, 65537, 589833, 15, 65537, 589834, 15, 65537, 589835, 15, 65537, 589836, 15, 65537, 589837, 15, 65537, 589838, 15, 65537, 589839, 15, 65537, 589840, 15, 65537, 589841, 15, 65537, 589842, 15, 65537, 589843, 15, 65537, 589844, 15, 65537, 589845, 15, 65537, 589846, 15, 65537, 589847, 15, 65537, 589848, 15, 65537, 589849, 15, 65537, 589850, 15, 65537, 589851, 15, 65537, 589852, 15, 65537, 589853, 15, 65537, 589854, 15, 65537, 589855, 15, 65537, 589856, 15, 65538, 720895, 15, 65536, 655360, 15, 65537, 655361, 15, 65537, 655362, 15, 65537, 655363, 15, 65537, 655364, 15, 65537, 655365, 15, 65537, 655366, 15, 65537, 655367, 15, 65537, 655368, 15, 65537, 655369, 15, 65537, 655370, 15, 65537, 655371, 15, 65537, 655372, 15, 65537, 655373, 15, 65537, 655374, 15, 65537, 655375, 15, 65537, 655376, 15, 65537, 655377, 15, 65537, 655378, 15, 65537, 655379, 15, 65537, 655380, 15, 65537, 655381, 15, 65537, 655382, 15, 65537, 655383, 15, 65537, 655384, 15, 65537, 655385, 15, 65537, 655386, 15, 65537, 655387, 15, 65537, 655388, 15, 65537, 655389, 15, 65537, 655390, 15, 65537, 655391, 15, 65537, 655392, 15, 65538, 786431, 15, 65536, 720896, 15, 65537, 720897, 15, 65537, 720898, 15, 65537, 720899, 15, 65537, 720900, 15, 65537, 720901, 15, 65537, 720902, 15, 65537, 720903, 15, 65537, 720904, 15, 65537, 720905, 15, 65537, 720906, 15, 65537, 720907, 15, 65537, 720908, 15, 65537, 720909, 15, 65537, 720910, 15, 65537, 720911, 15, 65537, 720912, 15, 65537, 720913, 15, 65537, 720914, 15, 65537, 720915, 15, 65537, 720916, 15, 65537, 720917, 15, 65537, 720918, 15, 65537, 720919, 15, 65537, 720920, 15, 65537, 720921, 15, 65537, 720922, 15, 65537, 720923, 15, 65537, 720924, 15, 65537, 720925, 15, 65537, 720926, 15, 65537, 720927, 15, 65537, 720928, 15, 65538, 851967, 15, 65536, 786432, 15, 65537, 786433, 15, 65537, 786434, 15, 65537, 786435, 15, 65537, 786436, 15, 65537, 786437, 15, 65537, 786438, 15, 65537, 786439, 15, 65537, 786440, 15, 65537, 786441, 15, 65537, 786442, 15, 65537, 786443, 15, 65537, 786444, 15, 65537, 786445, 15, 65537, 786446, 15, 65537, 786447, 15, 65537, 786448, 15, 65537, 786449, 15, 65537, 786450, 15, 65537, 786451, 15, 65537, 786452, 15, 65537, 786453, 15, 65537, 786454, 15, 65537, 786455, 15, 65537, 786456, 15, 65537, 786457, 15, 65537, 786458, 15, 65537, 786459, 15, 65537, 786460, 15, 65537, 786461, 15, 65537, 786462, 15, 65537, 786463, 15, 65537, 786464, 15, 65538, 917503, 15, 65536, 851968, 15, 65537, 851969, 15, 65537, 851970, 15, 65537, 851971, 15, 65537, 851972, 15, 65537, 851973, 15, 65537, 851974, 15, 65537, 851975, 15, 65537, 851976, 15, 65537, 851977, 15, 65537, 851978, 15, 65537, 851979, 15, 65537, 851980, 15, 65537, 851981, 15, 65537, 851982, 15, 65537, 851983, 15, 65537, 851984, 15, 65537, 851985, 15, 65537, 851986, 15, 65537, 851987, 15, 65537, 851988, 15, 65537, 851989, 15, 65537, 851990, 15, 65537, 851991, 15, 65537, 851992, 15, 65537, 851993, 15, 65537, 851994, 15, 65537, 851995, 15, 65537, 851996, 15, 65537, 851997, 15, 65537, 851998, 15, 65537, 851999, 15, 65537, 852000, 15, 65538, 983039, 15, 65536, 917504, 15, 65537, 917505, 15, 65537, 917506, 15, 65537, 917507, 15, 65537, 917508, 15, 65537, 917509, 15, 65537, 917510, 15, 65537, 917511, 15, 65537, 917512, 15, 65537, 917513, 15, 65537, 917514, 15, 65537, 917515, 15, 65537, 917516, 15, 65537, 917517, 15, 65537, 917518, 15, 65537, 917519, 15, 65537, 917520, 15, 65537, 917521, 15, 65537, 917522, 15, 65537, 917523, 15, 65537, 917524, 15, 65537, 917525, 15, 65537, 917526, 15, 65537, 917527, 15, 65537, 917528, 15, 65537, 917529, 15, 65537, 917530, 15, 65537, 917531, 15, 65537, 917532, 15, 65537, 917533, 15, 65537, 917534, 15, 65537, 917535, 15, 65537, 917536, 15, 65538, 1048575, 15, 65536, 983040, 15, 65537, 983041, 15, 65537, 983042, 15, 65537, 983043, 15, 65537, 983044, 15, 65537, 983045, 15, 65537, 983046, 15, 65537, 983047, 15, 65537, 983048, 15, 65537, 983049, 15, 65537, 983050, 15, 65537, 983051, 15, 65537, 983052, 15, 65537, 983053, 15, 65537, 983054, 15, 65537, 983055, 15, 65537, 983056, 15, 65537, 983057, 15, 65537, 983058, 15, 65537, 983059, 15, 65537, 983060, 15, 65537, 983061, 15, 65537, 983062, 15, 65537, 983063, 15, 65537, 983064, 15, 65537, 983065, 15, 65537, 983066, 15, 65537, 983067, 15, 65537, 983068, 15, 65537, 983069, 15, 65537, 983070, 15, 65537, 983071, 15, 65537, 983072, 15, 65538, 1114111, 15, 65536, 1048576, 15, 65537, 1048577, 15, 65537, 1048578, 15, 65537, 1048579, 15, 65537, 1048580, 15, 65537, 1048581, 15, 65537, 1048582, 15, 65537, 1048583, 15, 65537, 1048584, 15, 65537, 1048585, 15, 65537, 1048586, 15, 65537, 1048587, 15, 65537, 1048588, 15, 65537, 1048589, 15, 65537, 1048590, 15, 65537, 1048591, 15, 65537, 1048592, 15, 65537, 1048593, 15, 65537, 1048594, 15, 65537, 1048595, 15, 65537, 1048596, 15, 65537, 1048597, 15, 65537, 1048598, 15, 65537, 1048599, 15, 65537, 1048600, 15, 65537, 1048601, 15, 65537, 1048602, 15, 65537, 1048603, 15, 65537, 1048604, 15, 65537, 1048605, 15, 65537, 1048606, 15, 65537, 1048607, 15, 65537, 1048608, 15, 65538, 1179647, 15, 65536, 1114112, 15, 65537, 1114113, 15, 65537, 1114114, 15, 65537, 1114115, 15, 65537, 1114116, 15, 65537, 1114117, 15, 65537, 1114118, 15, 65537, 1114119, 15, 65537, 1114120, 15, 65537, 1114121, 15, 65537, 1114122, 15, 65537, 1114123, 15, 65537, 1114124, 15, 65537, 1114125, 15, 65537, 1114126, 15, 65537, 1114127, 15, 65537, 1114128, 15, 65537, 1114129, 15, 65537, 1114130, 15, 65537, 1114131, 15, 65537, 1114132, 15, 65537, 1114133, 15, 65537, 1114134, 15, 65537, 1114135, 15, 65537, 1114136, 15, 65537, 1114137, 15, 65537, 1114138, 15, 65537, 1114139, 15, 65537, 1114140, 15, 65537, 1114141, 15, 65537, 1114142, 15, 65537, 1114143, 15, 65537, 1114144, 15, 65538, 1245183, 15, 131072, 1179648, 15, 131073, 1179649, 15, 131073, 1179650, 15, 131073, 1179651, 15, 131073, 1179652, 15, 131073, 1179653, 15, 131073, 1179654, 15, 131073, 1179655, 15, 131073, 1179656, 15, 131073, 1179657, 15, 131073, 1179658, 15, 131073, 1179659, 15, 131073, 1179660, 15, 131073, 1179661, 15, 131073, 1179662, 15, 131073, 1179663, 15, 131073, 1179664, 15, 131073, 1179665, 15, 131073, 1179666, 15, 131073, 1179667, 15, 131073, 1179668, 15, 131073, 1179669, 15, 131073, 1179670, 15, 131073, 1179671, 15, 131073, 1179672, 15, 131073, 1179673, 15, 131073, 1179674, 15, 131073, 1179675, 15, 131073, 1179676, 15, 131073, 1179677, 15, 131073, 1179678, 15, 131073, 1179679, 15, 131073, 1179680, 15, 131074 )

[node name="GUI" type="Control" parent="." index="8"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Row1Label" type="Label" parent="GUI" index="0"]
margin_left = 96.0
margin_top = 96.0
margin_right = 240.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 16, 16 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.105882, 0.0980392, 0.172549, 1 )
text = "Music"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Row1Toggle" type="Label" parent="GUI" index="1"]
margin_left = 272.0
margin_top = 96.0
margin_right = 416.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 16, 16 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.105882, 0.0980392, 0.172549, 1 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Row2Label" type="Label" parent="GUI" index="2"]
margin_left = 96.0
margin_top = 128.0
margin_right = 240.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 16, 16 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.105882, 0.0980392, 0.172549, 1 )
text = "Sound FX"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Row2Toggle" type="Label" parent="GUI" index="3"]
margin_left = 272.0
margin_top = 128.0
margin_right = 416.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 16, 16 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.105882, 0.0980392, 0.172549, 1 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Row3Label" type="Label" parent="GUI" index="4"]
margin_left = 96.0
margin_top = 160.0
margin_right = 240.0
margin_bottom = 192.0
rect_pivot_offset = Vector2( 16, 16 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.105882, 0.0980392, 0.172549, 1 )
text = "Minimap"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Row3Toggle" type="Label" parent="GUI" index="5"]
margin_left = 272.0
margin_top = 160.0
margin_right = 416.0
margin_bottom = 192.0
rect_pivot_offset = Vector2( 16, 16 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.105882, 0.0980392, 0.172549, 1 )
text = "On"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToLobbyLabel" type="Label" parent="GUI" index="6"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 54.0
margin_top = 256.0
margin_right = 196.0
margin_bottom = 272.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "back to home"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToLobbyLabel2" type="Label" parent="GUI" index="7"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 53.8804
margin_top = 272.0
margin_right = 195.88
margin_bottom = 288.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "toggle setting"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icons" type="Node2D" parent="." index="9"]

[node name="KeyGamepadCancel" type="Sprite" parent="Icons" index="0"]
position = Vector2( 59.6196, 263.885 )
texture = ExtResource( 9 )

[node name="KeyGamepadCancel2" type="Sprite" parent="Icons" index="1"]
position = Vector2( 59.5, 279.885 )
texture = ExtResource( 5 )

[node name="KeyKeyboardCancel" type="Sprite" parent="Icons" index="2"]
visible = false
position = Vector2( 60, 264 )
texture = ExtResource( 4 )
[connection signal="tree_exited" from="." to="." method="_on_Map_tree_exited"]
